changes for android

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <h1 id="level-title">Press A Key to Start</h1>
+  <button><h1 id="level-title">Click here to Start</h1></button>
   <div class="container">
     <div lass="row">
 
