--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <button><h1 id="level-title">Click here to Start</h1></button>
   <div class="container">
     <div lass="row">
-
+      <div>
+          <a id="instructions" class="ins" href="instructions.html">Read Instructions</a>
+      </div>
       <div type="button" id="green" class="btn green">
 
       </div>
