--- a/instructions.html
+++ b/instructions.html
@@ -1,26 +1,43 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="styles.css">
-  </head>
-  <body style="background-color:#7FDBFF">
-    <div class="container">
-      <div class="row">
-        <div>
-          <a class="ins game" href="index.html">Play Game</a>
-        </div>
-      </div>
-      <div class="row">
-        <div >
-          <h1 class="wait">Our best mind(Vidhi) working
-             on this It will be available soon</h1>
-        </div>
-      </div>
-      <div class="row">
-        <img class="img" src="images/heart.jpeg" alt="">
+
+<head>
+  <meta charset="utf-8">
+  <title></title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body style="background-color:#7FDBFF">
+  <div class="container">
+    <div class="row">
+      <div>
+        <a class="game ins" href="index.html">Play Game</a>
       </div>
     </div>
-  </body>
+    <div class="row">
+      <div>
+        <p><h1 class="wait">This game is designed to evaluate one's focus level. Higher the level you cross, higher your focus level is.</h1>
+          <hr />
+          <h2 class="ques">How to play ?</h2>
+          <span>1.)</span>  <span class="para">On starting the game, one of the dots will blink. Pay attention and click on the colored dot as soon as it blinks.</span><hr/>
+
+          <span>2.)</span>  <span class="para">On clicking the right dot, it takes you to next level where again a dot is blinked but this time you need to remember the pattern.</span><hr/>
+
+          <span>3.)</span>  <span class="para">On reaching next level, you have to click on the dots in the order in which they appeared starting fron the very first level.</span><hr/>
+
+        </hr/>
+
+          <h2 class="ques">Example</h2>
+          <h3>Level 0</h3><span class="para"> Blue dot blinked, click on tge blue dot.</span><hr />
+          <h3>Level 1</h3> <span class="para"> Red dot blinked, click on blue dot and then red dot.</span><hr />
+          <h3>Level 2</h3> <span class="para"> Blue dot blinked, click on blue dot, then red dot and again blue dot.</span><hr />
+          <h3>Level 3</h3> <span class="para"> Yellow dot blinked, click on blue dot, then red dot, then blue dot, then yellow dot.</span><hr />
+          <h2 class="ques">And So On</h2><hr/>
+          <h1 style="color:#C3447A">On clicking of the wrong dot in a pattern, the game ends.
+          Now you can start and Enjoy the Game 😊</h1></p>
+      </div>
+    </div>
+  </div>
+</body>
+
 </html>
