--- a/instructions.html
+++ b/instructions.html
@@ -23,7 +23,7 @@
 
           <span>2.)</span>  <span class="para">On clicking the right dot, it takes you to next level where again a dot is blinked but this time you need to remember the pattern.</span><hr/>
 
-          <span>3.)</span>  <span class="para">On reaching next level, you have to click on the dots in the order in which they appeared starting fron the very first level.</span><hr/>
+          <span>3.)</span>  <span class="para">On reaching next level, you have to click on the dots in the order in which they appeared starting from the very first level.</span><hr/>
 
         </hr/>
 
