--- a/instructions.html
+++ b/instructions.html
@@ -28,7 +28,7 @@
         </hr/>
 
           <h2 class="ques">Example</h2>
-          <h3>Level 0</h3><span class="para"> Blue dot blinked, click on tge blue dot.</span><hr />
+          <h3>Level 0</h3><span class="para"> Blue dot blinked, click on the blue dot.</span><hr />
           <h3>Level 1</h3> <span class="para"> Red dot blinked, click on blue dot and then red dot.</span><hr />
           <h3>Level 2</h3> <span class="para"> Blue dot blinked, click on blue dot, then red dot and again blue dot.</span><hr />
           <h3>Level 3</h3> <span class="para"> Yellow dot blinked, click on blue dot, then red dot, then blue dot, then yellow dot.</span><hr />
