--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="container">
     <div lass="row">
       <div>
-          <a id="instructions" class="ins" href="instructions.html">Read Instructions</a>
+          <a id="instructions" class="ins large" href="instructions.html">Read Instructions</a>
       </div>
       <div type="button" id="green" class="btn green">
 
