--- a/instructions.html
+++ b/instructions.html
@@ -8,12 +8,8 @@
 </head>
 
 <body style="background-color:#7FDBFF">
+    <a class="game ins large" href="index.html">Play Game</a><hr />
   <div class="container">
-    <div class="row">
-      <div>
-        <a class="game ins" href="index.html">Play Game</a>
-      </div>
-    </div>
     <div class="row">
       <div>
         <p><h1 class="wait">This game is designed to evaluate one's focus level. Higher the level you cross, higher your focus level is.</h1>
