--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 
+
 <body>
-  <button><h1 id="level-title">Click here to Start</h1></button>
+  <button>
+    <h1 id="level-title">Click here to Start</h1>
+  </button>
   <div class="container">
     <div lass="row">
       <div>
-          <a id="instructions" class="ins large" href="instructions.html">Read Instructions</a>
+        <a id="instructions" class="ins large" href="instructions.html">Read Instructions</a>
       </div>
       <div type="button" id="green" class="btn green">
 
@@ -37,8 +40,9 @@
     </div>
 
   </div>
-
-<script src="index.js" charset="utf-8"></script>
+  <div id="google_translate_element"></div>
+  <script src="index.js" charset="utf-8"></script>
+  <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>  
 </body>
 
 </html>
