--- a/instructions.html
+++ b/instructions.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <title></title>
   <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 
 <body style="background-color:#7FDBFF">
@@ -34,6 +36,9 @@
       </div>
     </div>
   </div>
+    <div id="google_translate_element"></div>
+    <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    <script src="index.js" charset="utf-8"></script>
 </body>
 
 </html>
