--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       <div>
         <a id="instructions" class="ins large" href="instructions.html">Read Instructions</a>
       </div>
+      <div>
+        <a class="large ins" style="color:#813479" href="#google_translate_element">Change Language</a>
+      </div>
       <div type="button" id="green" class="btn green">
 
       </div>
@@ -40,9 +43,9 @@
     </div>
 
   </div>
-  <div id="google_translate_element"></div>
+  <div class="google_translate_eleme" id="google_translate_element"></div>
   <script src="index.js" charset="utf-8"></script>
-  <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>  
+  <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
 
 </html>
